Inserted Header, footer, image, and links to Final Notice Doc

--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
     <title>Final Notice</title>
 </head>
 <body>
-    <h1></h1>
-    <h3></h3>
+    <h1>Final Notice: Recipient is Commanded to Retrieve Their Poperty Immediatly.</h1>
+    <h2> Failure to Retrieve will Result in the Properties Eviction by the Authorities</h2>
+    
     <p></p>
     <br/>
     <p></p>
     <br/>
     <h2></h2>
-    <img src="" alt="">
-    <a href=""></a>
+
+    <a href="https://i.redd.it/cftedi0gd2k31.jpg">
+        <img src="../BasicHTMLTags/Assets/cftedi0gd2k31.jpg" alt="Frisbee in Tree"
+        style="border-radius: 16px;"
+        width="350" height="350">></a>
+
+    <h3><a href="https://en.wikipedia.org/wiki/Park"target="_blank">GustyBreezes Parks Department</a></h3>
 
 </body>
 </html>
