Inserted text into Final Notice body

--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
     <title>Final Notice</title>
 </head>
 <body>
-    <h1>Final Notice: Recipient is Commanded to Retrieve Their Poperty Immediatly.</h1>
+    <h1>Final Notice: Recipient is Commanded to Retrieve Their Poperty Immediately.</h1>
     <h2> Failure to Retrieve will Result in the Properties Eviction by the Authorities</h2>
     
-    <p></p>
+    <p> 
+        Judgement has been made to remove Recipients Frisbee for the youthful and leggy Oak at the corner of Bella and Aardvark. 
+        Recipients possession will be removed and placed somewhere else if there is a failure to comply. 
+    </p>
     <br/>
-    <p></p>
+    <p>No other notices will be given. Contact Park Manager to arrange a final inspection.</p>
     <br/>
-    <h2></h2>
 
     <a href="https://i.redd.it/cftedi0gd2k31.jpg">
         <img src="../BasicHTMLTags/Assets/cftedi0gd2k31.jpg" alt="Frisbee in Tree"
         style="border-radius: 16px;"
         width="350" height="350">></a>
-
+    <hr/>
     <h3><a href="https://en.wikipedia.org/wiki/Park"target="_blank">GustyBreezes Parks Department</a></h3>
 
 </body>
