Final Not doc: Final edit of this version: Removed punctuation from header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Final Notice</title>
 </head>
 <body>
-    <h1>Final Notice: Recipient is Commanded to Retrieve Their Poperty Immediately.</h1>
+    <h1>Final Notice: Recipient is Commanded to Retrieve Their Poperty Immediately</h1>
     <h2> Failure to Retrieve will Result in the Properties Eviction by the Authorities</h2>
     <br/>
     <p> Judgement has been made to remove Recipients Frisbee for the youthful and leggy Oak at the corner of Bella and Aardvark. </p>
