--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <h1>Final Notice: Recipient is Commanded to Retrieve Their Poperty Immediately</h1>
     <h2> Failure to Retrieve will Result in the Properties Eviction by the Authorities</h2>
     <br/>
-    <p> Judgement has been made to remove Recipients Frisbee for the youthful and leggy Oak at the corner of Bella and Aardvark. </p>
-    <p> Recipients possession will be removed and placed somewhere else if there is a failure to comply. </p>
+    <ul>
+        <li> Judgement has been made to remove Recipients Frisbee for the youthful and leggy Oak at the corner of Bella and Aardvark.</li>
+        <li>Recipients possession will be removed and placed somewhere else if there is a failure to comply.</li>
+    </ul>
     <br/>
     <p>No other notices will be given. Contact Park Manager to arrange a final inspection.</p>
     <br/>
